# muninn

./: .gitignore  AGENTS.md  MVP1.md  NEXT_STEPS.md  README.md  muninn.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  review-loop-report-current.md
.github/workflows/: agent-e2e-ci.yml  apple-ci.yml  claude-ci.yml  codex-ci.yml  common-ci.yml  mcp-ci.yml  native-ci.yml  server-ci.yml  ts-core-ci.yml  web-ci.yml
agents/: brief-memory-distillation.md  brief-munnai-board.md  brief-openclaw-integration.md  progress-memory-distillation.md  progress-munnai-board.md  progress-openclaw-integration.md
app/: README.md  package.json  tsconfig.json  vite.config.ts
app/test/: artifact-view.test.mjs  session-content-state.test.mjs  settings-ui-source.test.mjs
apple/macos/: Package.swift  README.md
benchmark/: README.md  __init__.py
benchmark/common/: muninn_bridge.py  munnai_bridge.py
benchmark/locomo/: README.md  __init__.py  run.py  (+12 more)
claude/: README.md  package.json  tsconfig.json
cli/: README.md  package.json
codex/: README.md  package.json
common/: package.json
core/: Cargo.toml  README.md
core/prompts/: observing.yaml  observing_gateway.yaml  turn.yaml
core/src/: config.rs  lib.rs  main.rs  muninn.rs  observer.rs  service.rs  session.rs  storage.rs  test_support.rs  watchdog.rs
core/src/format/: access.rs  codec.rs  memory.rs  mod.rs  observing.rs  schema.rs  semantic_index.rs  session.rs  thinking.rs
core/src/format/memory/: memory_id.rs  mod.rs  session.rs
core/src/format/table/: access.rs  codec.rs  mod.rs  observing.rs  semantic_index.rs  session.rs
core/src/llm/: config.rs  embedding.rs  mock.rs  mod.rs  observing.rs  observing_update.rs  openai.rs  prompts.rs  provider.rs  turn.rs  turn_eval.rs
core/src/memory/: memories.rs  mod.rs  observings.rs  sessions.rs  types.rs
core/src/muninn/: memories.rs  observings.rs  sessions.rs
core/src/observer/: mod.rs  observer.rs  observing.rs  runtime.rs  tests.rs  thread.rs  types.rs
core/src/session/: key.rs  registry.rs  update.rs
core/tests/: turn_cases.rs
core/tests/fixtures/: turn_cases.yaml
docs/: README.md  board-interaction-style.md  mcp-interface-audit.md  mcp_naming_study.md  muninn-vs-claude-mem-mcp.md  muninn-vs-claude-mem.md  muninn-web-interaction-style.md  munnai-mcp-design.md  munnai-vs-claude-mem-mcp.md  munnai-vs-claude-mem.md  openclaw-integration-decision.md  sidecar-http-api.md  tech-stack-research.md
format/: Cargo.toml  README.md  package.json
format/src/: access.rs  codec.rs  config.rs  curation.rs  dreaming.rs  extraction.rs  global_observation.rs  global_observation_context.rs  lib.rs  maintenance.rs  memory_id.rs  observation.rs  observation_context.rs  observing.rs  schema.rs  semantic_index.rs  session.rs  session_observation.rs  turn.rs
mcp/: README.md  package.json  tsconfig.json
rust/: Cargo.toml
scripts/: clear-generated-memory.mjs  export-daemon.sh  finalize-memory.mjs  install-daemon.sh  migrate-dreaming-project-to-checkpoint.mjs  run-session-extractor.mjs
server/: README.md  package.json
server/native/: Cargo.toml
server/native/src/: lib.rs
spec/: munnai-format-schema.md  munnai-mcp-api.md
web/: README.md  package.json  vite.config.ts
(+464 files in other folders)
