[package]
name = "muninn-format"
version = "0.1.0"
edition = "2024"

[lib]
name = "muninn_format"
path = "src/lib.rs"

[dependencies]
alloc-stdlib = "=0.2.2"
arrow-array = "57.0.0"
arrow-schema = "57.0.0"
async-trait = "0.1"
brotli-decompressor = "=5.0.1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1.0"
futures-util = "0.3"
lance = { version = "4.0.1", default-features = false }
lance-index = "4.0.1"
lance-linalg = "4.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
object_store = { version = "0.12.5", features = ["fs"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.13"
