[package]
name = "muninn-native"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
alloc-stdlib = "=0.2.2"
brotli-decompressor = "=5.0.1"
lance = { version = "4.0.1", default-features = false }
muninn-format = { path = "../../format" }
napi = { version = "2.16.13", default-features = false, features = ["napi8", "serde-json", "async"] }
napi-derive = "2.16.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
napi-build = "2.1.3"
